# bili2text

./: pyproject.toml
src/b2t/: bootstrap.py  cli.py  cli_progress.py  factory.py  i18n.py  user_config.py  window_app.py
src/b2t/templates/: index.html
src/b2t/transcribers/: __init__.py  funasr.py
tests/: test_bootstrap_env.py  test_i18n.py  test_user_config.py  test_web.py  test_whisper_local.py
